--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "static-maps-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+  },
+  "bin": {
+    "staticMap": "./cli.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@maplibre/maplibre-gl-native": "^5.0.1-pre.0",
-    "express": "^4.18.2",
+    "@maplibre/maplibre-gl-style-spec": "^17.0.1",
+    "fastify": "^4.9.2",
     "request": "^2.88.2",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "yargs": "13.2"
   }
 }
